--- a/conf/client_config.json
+++ b/conf/client_config.json
@@ -1,12 +1,12 @@
 {
   "inbound": {
     "host": "0.0.0.0",
-    "port": "10000",
+    "port": "8080",
     "protocol": "http"
   },
   "outbound": {
     "host": "localhost",
     "port": "9999",
-    "protocol": "http"
+    "protocol": "btp"
   }
 }
