add transmit config

--- a/conf/client_config.json
+++ b/conf/client_config.json
@@ -7,6 +7,7 @@
   "outbound": {
     "host": "localhost",
     "port": "9999",
-    "protocol": "btp"
+    "protocol": "btp",
+    "transmit": "tls"
   }
 }
