--- a/conf/server_config.json
+++ b/conf/server_config.json
@@ -2,7 +2,8 @@
   "inbound": {
     "host": "0.0.0.0",
     "port": "9999",
-    "protocol": "btp"
+    "protocol": "btp",
+    "transmit": "tls"
   },
   "outbound": {
     "protocol": "freedom"
