--- a/conf/server_config.json
+++ b/conf/server_config.json
@@ -3,7 +3,7 @@
     "host": "0.0.0.0",
     "port": "9999",
     "protocol": "btp",
-    "transmit": "tls"
+    "transmit": "ws"
   },
   "outbound": {
     "protocol": "freedom"
