--- a/conf/server_config.json
+++ b/conf/server_config.json
@@ -1,5 +1,6 @@
 {
   "inbound": [{
+    "secret": "c2fb629e-c8a2-4323-80dc-36fc793f57f5",
     "host": "0.0.0.0",
     "port": "9999",
     "protocol": "btp",
