add fallback config

--- a/conf/server_config.json
+++ b/conf/server_config.json
@@ -9,5 +9,9 @@
   }],
   "outbound": [{
     "protocol": "freedom"
-  }]
+  }],
+  "fallback": {
+    "local_addr": "localhost:80",
+    "remote_addr": "localhost:8000"
+  }
 }
