--- a/conf/client_config.json
+++ b/conf/client_config.json
@@ -4,12 +4,18 @@
     "port": "8080",
     "protocol": "http"
   }],
-  "outbound": [{
-    "secret": "c2fb629e-c8a2-4323-80dc-36fc793f57f5",
-    "host": "localhost",
-    "port": "9999",
-    "protocol": "btp",
-    "transmit": "ws",
-    "ws_path": "/bp"
-  }]
+  "outbound": [
+    {
+      "secret": "c2fb629e-c8a2-4323-80dc-36fc793f57f5",
+      "host": "localhost",
+      "port": "9999",
+      "protocol": "btp",
+      "transmit": "ws",
+      "ws_path": "/bp"
+    },
+    {
+      "tag": "direct",
+      "protocol": "freedom"
+    }
+  ]
 }
