--- a/conf/client_config.json
+++ b/conf/client_config.json
@@ -1,10 +1,10 @@
 {
-  "inbound": [{
+  "inbounds": [{
     "host": "0.0.0.0",
     "port": "8080",
     "protocol": "http"
   }],
-  "outbound": [
+  "outbounds": [
     {
       "secret": "c2fb629e-c8a2-4323-80dc-36fc793f57f5",
       "host": "localhost",
@@ -16,6 +16,16 @@
     {
       "tag": "direct",
       "protocol": "freedom"
+    }
+  ],
+  "routers": [
+    {
+      "tag": "direct",
+      "rules": [
+        "www.ipaddress.my",
+        "wwr.icu",
+        "ifconfig.me"
+      ]
     }
   ]
 }
