[feature] Add build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,8 @@
 name: Release Distribution
 on:
   push:
-    tags:
-      - v1.**
     branches:
-      - master
+      - 'release/**'
     paths-ignore:
       - "**/README.md"
       - "*.sh"
