--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,10 @@ name: Release Distribution
 on:
   push:
     branches:
-      - 'release/**'
+      - "release/**"
     paths-ignore:
-      - "**/README.md"
+      - "*.yml"
+      - "*.md"
       - "*.sh"
       - "*.json"
       - ".gitignore"
