--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,30 +19,28 @@ jobs:
         working-directory: bad_proxy_go
         shell: bash
     steps:
+      - name: clean
+        run: rm -rf bad_proxy_go || 0
       - name: Checkout codebase
         uses: actions/checkout@v4
         with:
           path: bad_proxy_go
-
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
           go-version-file: bad_proxy_go/go.mod
-
       - name: Prepare
         run: |
           git fetch --prune --unshallow --tags
           echo "RELEASE_NAME=$(git describe --tags HEAD --always)" >> $GITHUB_ENV
           echo "TAG_NAME=$(git describe --tags HEAD --always)" >> $GITHUB_ENV
           echo "DIST_NAME=bad_proxy_go" >> $GITHUB_ENV
-
       - name: Build
         run: |
           chmod +x ./build.sh
           ./build.sh ${{ env.DIST_NAME }}
         env:
           CGO_ENABLE: 0
-
       - name: Release and upload assets
         run: |
           gh release create ${{ env.TAG_NAME }} --generate-notes --prerelease --title ${{ env.RELEASE_NAME }} ./*.zip ./*.sha256sum
