--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build Artifact
 on:
   push:
     branches:
@@ -14,10 +14,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: bad_proxy_go
-        shell: bash
+    permissions: write-all
     steps:
       - name: Checkout codebase
         uses: actions/checkout@v4
@@ -29,10 +26,15 @@ jobs:
           go-version-file: bad_proxy_go/go.mod
       - name: Build
         run: |
+          cd bad_proxy_go
           chmod +x ./build.sh
           ./build.sh ${{ vars.DIST_NAME }}
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          path: ./${{ vars.DIST_NAME }}.*
+          path: bad_proxy_go/dist
           overwrite: true
+      - name: Attest
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-path: 'bad_proxy_go/dist/**/*.tar.gz, bad_proxy_go/dist/**/*.zip'
