--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,8 +12,9 @@ on:
   workflow_dispatch:
 jobs:
   release_github:
-    name: Release for github
+    name: Release on github
     runs-on: ubuntu-latest
+    permissions: write-all
     defaults:
       run:
         working-directory: bad_proxy_go
@@ -32,13 +33,18 @@ jobs:
           chmod +x ./build.sh
           ./build.sh ${{ vars.DIST_NAME }}
       - name: Release and upload assets
-        run: gh release create ${{ github.ref }} --title ${{ github.ref }} --generate-notes --latest ./*.tar.gz ./*.zip ./*.sha256sum
+        run: gh release create ${{ github.ref_name }} --title ${{ github.ref_name }} --generate-notes --latest ./dist/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Attest
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-path: 'bad_proxy_go/dist/**/*.tar.gz, bad_proxy_go/dist/**/*.zip'
   release_dockerhub:
-    name: Release for dockerhub
+    name: Release on dockerhub
     runs-on: ubuntu-latest
     needs: release_github
+    permissions: write-all
     steps:
       - name: Set up Docker Build
         uses: docker/setup-buildx-action@v3
@@ -51,9 +57,8 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: wwricu/bad_proxy_go:${{ github.ref }}
-      - name: Build and push latest
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          tags: wwricu/bad_proxy_go:latest
+          sbom: true
+          tags: |
+            wwricu/bad_proxy_go:${{ github.ref_name }}
+            wwricu/bad_proxy_go:latest
+          provenance: mode=max
