--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,6 @@ on:
       - "**.sh"
       - "**.json"
       - ".gitignore"
-  workflow_dispatch:
 jobs:
   release_github:
     name: Release for github
@@ -32,7 +31,7 @@ jobs:
           chmod +x ./build.sh
           ./build.sh ${{ vars.DIST_NAME }}
       - name: Release and upload assets
-        run: gh release create ${{ github.ref }} --title ${{ github.ref }} --generate-notes --latest ./dist/*
+        run: gh release create ${{ github.ref_name }} --title ${{ github.ref_name }} --generate-notes --latest ./dist/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   release_dockerhub:
@@ -51,7 +50,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: wwricu/bad_proxy_go:${{ github.ref }}
+          tags: wwricu/bad_proxy_go:${{ github.ref_name }}
       - name: Build and push latest
         uses: docker/build-push-action@v6
         with:
