--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           path: bad_proxy_go/dist
+          overwrite: true
       - name: Attest
         uses: actions/attest-build-provenance@v1
         with:
