--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,7 @@ on:
       - "**.sh"
       - "**.json"
       - ".gitignore"
+  workflow_dispatch:
 jobs:
   release_github:
     name: Release on github
