[feature] build for dyna lib
Signed-off-by: wwr <me@wwr.icu>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
+          name: bad-proxy-go
           path: bad_proxy_go/dist
           overwrite: true
       - name: Attest
