--- a/.github/workflows/build_lib.yml
+++ b/.github/workflows/build_lib.yml
@@ -35,9 +35,11 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: libproxy.so
-          path: bad_proxy_go/libproxy.so
+          path: |
+            bad_proxy_go/libproxy.so
+            bad_proxy_go/libproxy.h
           overwrite: true
       - name: Attest
         uses: actions/attest-build-provenance@v1
         with:
-          subject-path: 'bad_proxy_go/libproxy.so'
+          subject-path: 'bad_proxy_go/libproxy.so, bad_proxy_go/libproxy.h'
